--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -354,7 +354,7 @@
     ></van-field>
   </van-cell-group> -->
 
-  <van-cell-group>
+  <!-- <van-cell-group>
     <van-field
       value="输入框已禁用"
       label="用户名"
@@ -362,6 +362,114 @@
       disabled
       border="{{false}}"
     ></van-field>
-  </van-cell-group>
+  </van-cell-group> -->
   
+  <!-- <van-cell-group>
+    <van-field
+    value="{{ username }}"
+    label="用户名"
+    placeholder="请输入用户名"
+    error
+  />
+  <van-field
+    value="{{ phone }}"
+    label="手机号"
+    placeholder="请输入手机号"
+    error-message="手机号格式错误"
+    border="{{ false }}"
+  />
+  </van-cell-group> -->
+
+  <!-- <van-cell-group>
+    <van-field
+      value="{{username}}"
+      label="用户名"
+      placeholder="请输入用户名"
+      input-align="left"
+    ></van-field>
+  </van-cell-group> -->
+
+  <!-- <van-cell-group>
+    <van-field
+      value="{{message}}"
+      label="留言"
+      type="textarea"
+      placeholder="请输入留言"
+      autosize
+      border="{{false}}"
+    ></van-field>
+  </van-cell-group> -->
+  
+  <!-- <van-cell-group>
+    <van-field
+      value="{{sms}}"
+      center
+      clearable
+      label="短信验证码"
+      placeholder="请输入短信验证码"
+      border="{{false}}"
+      user-button-slot>
+      <van-button 
+        slot="button"
+        size="small"
+        type="primary"
+      >发送验证码</van-button>
+    </van-field>
+  </van-cell-group> -->
+
+  <!-- <van-picker
+    columns="{{columns}}"
+    bind:change="onChange"
+    default-index="{{2}}"
+  ></van-picker> -->
+
+  <!-- <van-picker
+    show-toolbar
+    title="标题"
+    columns="{{columns}}"
+    bind:cancel="onCancel"
+    bind:confirm="onConfirm"
+  ></van-picker>
+  <van-toast id="van-toast"></van-toast> -->
+
+  <!-- <van-picker
+    columns="{{columns}}"
+    bind:change="onChange"
+  ></van-picker> -->
+
+  <!-- <van-picker
+    columns="{{columns}}"
+  ></van-picker> -->
+
+  <!-- <van-radio-group value="{{radio}}" bind:change="onChange">
+    <van-radio name="1" icon-size="36px" shape="square" checked-color="#07c160">单选框1</van-radio>
+    <van-radio name="2" icon-size="36px" shape="square" checked-color="#07c160">单选框2</van-radio>
+  </van-radio-group> -->
+
+  <!-- <van-radio-group value="{{radio}}" bind:change="onChange">
+    <van-radio use-icon-slot value="{{radio}}" name="1">
+      自定义图标
+      <image slot="icon" src="{{radio === '1' ? icon.active : icon.normal}}"></image>
+    </van-radio>
+    <van-radio use-icon-slot value="{{radio}}" name="2">
+      自定义图标
+      <image slot="icon" src="{{radio === '2' ? icon.active : icon.normal}}"></image>
+    </van-radio>
+  </van-radio-group> -->
+
+  <!-- <van-radio-group value="{{radio}}" bind:change="onChange">
+    <van-radio name="1" label-disabled>单选框1</van-radio>
+    <van-radio name="2" label-disabled>单选框2</van-radio>
+  </van-radio-group> -->
+
+  <!-- <van-radio-group value="{{radio}}" bind:change="onChange">
+    <van-cell-group>
+      <van-cell title="单选框1" clickable data-name="1" bind:click="onClick">
+        <van-radio slot="right-icon" name="1"></van-radio>
+      </van-cell>
+      <van-cell title="单选框2" clickable data-name="2" bind:click="onClick">
+        <van-radio slot="right-icon" name="2"></van-radio>
+      </van-cell>
+    </van-cell-group>
+  </van-radio-group> -->
 </view>
