--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -52,3 +52,48 @@
   font-size: 14px;
   border-radius: 100px;
 } */
+
+/* .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.block {
+  width: 120px;
+  height: 120px;
+  background-color: #fff;
+} */
+
+/* .left {
+  line-height: var(--cell-line-height,24px);
+  padding: var(--cell-vertical-padding,10px) 0;
+  background-color: red;
+  width: 65px;
+  color: white;
+  text-align: center;
+}
+.right {
+  line-height: var(--cell-line-height,24px);
+  padding: var(--cell-vertical-padding,10px) 0;
+  background-color: green;
+  width: 65px;
+  color: white;
+  text-align: center;
+} */
+
+/* .item {
+  display: inline-block;
+  width: 22px;
+  margin-right: 5px;
+  color: #fff;
+  font-size: 12px;
+  text-align: center;
+  background-color: #1989fa;
+  border-radius: 2px;
+} */
+
+.bottom-button {
+  width: 160px;
+  height: 40px;
+}
