--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -891,4 +891,54 @@
   </view>
 </van-panel> -->
 
+<!-- <van-progress percentage="50"></van-progress> -->
+
+<!-- <van-progress percentage="50" stroke-width="20"></van-progress> -->
+
+<!-- <van-progress inactive percentage="50"></van-progress> -->
+
+<!-- <van-progress pivot-text="橙色" color="#f2826a" percentage="25"></van-progress>
+
+<van-progress pivot-text="红色" color="#ee0a24" percentage="50"></van-progress>
+
+<van-progress percentage="75" pivot-text="紫色" pivot-color="#7232dd" color="linear-gradient(to right, #be99ff, #7232dd)"></van-progress> -->
+
+<!-- <van-skeleton title row="3"></van-skeleton> -->
+
+<!-- <van-skeleton title avatar row="3"></van-skeleton> -->
+
+<!-- <van-skeleton title avatar row="3" loading="{{loading}}">
+  <view>实际内容</view>
+</van-skeleton> -->
+
+  <!-- <van-steps 
+    steps="{{steps}}" 
+    direction="vertical"
+    active-color="#ee0a24"
+    active="{{active}}">
+  </van-steps> -->
+
+  <!-- <view style="height: 600px"></view>
+  <van-sticky offset-top="{{50}}">
+    <van-button type="primary">基础用法</van-button>
+  </van-sticky>
+  <view style="height: 800px"></view> -->
+
+  <!-- <view id="container" style="height: 150px;">
+    <van-sticky container="{{container}}">
+      <van-button type="warning">指定容器</van-button>
+    </van-sticky>
+    <view style="height: 400px;"></view>
+  </view> -->
+
+  <scroll-view bind:scroll="onScroll" scroll-y id="scroller" style="height: 200px">
+    <view style="height: 400px; padding-top: 50px">
+      <van-sticky scroll-top="{{scrollTop}}" offset-top="{{offsetTop}}">
+        <van-button type="warning">
+          嵌套在 scroll-view 内
+        </van-button>
+      </van-sticky>
+    </view>
+  </scroll-view>
+  
 </view>
